# pardiso

./: CMakeLists.txt
SpSolver/: CMakeLists.txt
SpSolver/include/: SpMat.h  SpSolver.h
SpSolver/src/: SpMat.cpp  SpSolver.cu
test/: CMakeLists.txt  main.cpp
